--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
     paths: 
       - schema_change_detection/*
       - table_creates_and_drops_log/*
+      - workflows/*
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
