--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ name: Test 1
 on:
   push:
     branches: [ master ]
-    paths: 
-      - schema_change_detection/*
-      - table_creates_and_drops_log/*
-      - workflows/*
+#     paths: 
+#       - schema_change_detection/*
+#       - table_creates_and_drops_log/*
+#       - workflows/*
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,7 +26,7 @@ jobs:
       uses: toru-takahashi/treasure-workflow-actions@v0.0.2
       with:
         td_master_apikey: ${{ secrets.td_master_apikey }}
-        td_wf_project_name: mk_git_test_1 --project workflows/schema_change_detection -r "$(date +%Y-%m-%dT%H:%M:%S%z)"-"$(git show --pretty | head -n 1)"
+        td_wf_project_name: mk_git_test_1 --project workflows/schema_change_detection -r "$(date +%Y-%m-%dT%H:%M:%S%z)"-"$(git show)"
         
     - name: Treasure Workflow 1
       uses: toru-takahashi/treasure-workflow-actions@v0.0.2
